# bioinfo_markov

./: CMakeLists.txt  README  README.md  export
projet_bioinfo_wirth/: .gitignore  AUTHORS  CMakeLists.txt  README  check  test_check
projet_bioinfo_wirth/given_files/: PF00018_full_0.3.model  PF00018_full_0.5.model  PF00018_full_0.7.model  PF00595_full_0.3.model  PF00595_full_0.5.model  PF00595_full_0.7.model  PF00595_seed.txt  PF00595_seed_0.3.model  PF00595_seed_0.7.model  PF00595_seq2.txt  PF00595_seq3.txt  PF02171_full_0.3.model  PF02171_full_0.5.model  PF02171_full_0.7.model  alphabet.py  test_outputs.txt
projet_bioinfo_wirth/src/HMM/: Fasta.cpp  Fasta.h  HMM.cpp  HMM.h
projet_bioinfo_wirth/src/hmm-align/: main.cpp
projet_bioinfo_wirth/src/hmm-build/: main.cpp
projet_bioinfo_wirth/src/hmm-genseq/: main.cpp
projet_bioinfo_wirth/test/: hmm-align-test
projet_bioinfo_wirth/test/given_files/: PF00595_full_0.3.model  PF00595_seed_0.5.model
src/HMM/: Fasta.h  HMM.cpp  HMM.h
src/hmm-align/: main.cpp
test/: hmm-align-test  hmm-build-test  hmm-genseq-check  hmm-genseq-test
test/given_files/: PF00595_full_0.5.model  PF00595_seq1.txt
